# random-questions

./: .env  .gitignore  Cargo.toml  README.md  test.db
migrations/2022-09-08-125914_create_random_questions/: down.sql  up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
