[package]
name = "five-random-questions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.2", features = ["derive"] }
derive_more = "0.99.17"
