[package]
name = "five-random-questions"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.2", features = ["derive"] }
derive_more = "0.99.17"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
